Closed
Bug 1827411
Opened 2 years ago
Closed 2 years ago
Compilation failure when enabling NOISY_FINAL_SIZE or REALLY_NOISY_REFLOW flags
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
114 Branch
Tracking | Status | |
---|---|---|
firefox114 | --- | fixed |
People
(Reporter: WhiteMind, Assigned: WhiteMind)
Details
Attachments
(1 file)
Steps to reproduce:
I use ./mach build to compile on macOS, with the following mozconfig configuration:
ac_add_options --disable-optimize
ac_add_options --enable-debug-symbols
ac_add_options --enable-layout-debugger
export MOZ_DEBUG_FLAGS="-DNOISY_FINAL_SIZE -DREALLY_NOISY_REFLOW"
Actual results:
mozilla-unified/layout/generic/nsInlineFrame.cpp:642:19: error: no member named 'TopAscent' in 'mozilla::ReflowOutput'
aMetrics.TopAscent());
1 error generated.
mozilla-unified/layout/generic/nsBlockFrame.cpp:5608:20: error: use of undeclared identifier 'out'
frame->ListTag(out);
mozilla-unified/layout/generic/nsBlockFrame.cpp:5652:20: error: use of undeclared identifier 'out'
frame->ListTag(out);
2 errors generated.
Expected results:
There should be no errors
Comment 2•2 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Layout' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Component: Untriaged → Layout
Product: Firefox → Core
Updated•2 years ago
|
Assignee: nobody → WhiteMind
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f132339c4be8
Compilation failure when enabling NOISY_FINAL_SIZE or REALLY_NOISY_REFLOW flags. r=emilio
Updated•2 years ago
|
Severity: -- → S3
Comment 5•2 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
status-firefox114:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 114 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•