Bug 1827411 - Compilation failure when enabling NOISY_FINAL_SIZE or REALLY_NOISY_REFLOW flags. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D175210