layout/generic/nsBlockFrame.cpp
@@ -5753,7 +5753,7 @@ void nsBlockFrame::AppendFrames(ChildListID aListID, nsFrameList&& aFrameList) {
   ListTag(stdout);
   printf(": append ");
   for (nsIFrame* frame : aFrameList) {
-    frame->ListTag(out);
+    frame->ListTag(stdout);
   }
   if (lastKid) {
     printf(" after ");
@@ -5798,7 +5798,7 @@ void nsBlockFrame::InsertFrames(ChildListID aListID, nsIFrame* aPrevFrame,
   ListTag(stdout);
   printf(": insert ");
   for (nsIFrame* frame : aFrameList) {
-    frame->ListTag(out);
+    frame->ListTag(stdout);
   }
   if (aPrevFrame) {
     printf(" after ");
